--- a/index.html
+++ b/index.html
@@ -669,12 +669,12 @@
         </header>
 
         <div class="owl-carousel clients-carousel">
-          <img src="img/clients/itau.png" alt="" >
-          <img src="img/clients/bradesco.png" alt="">
-          <img src="img/clients/cetelem.png" alt="">
-          <img src="img/clients/pan.png" alt="">
-          <img src="img/clients/banrisul.png" alt="">
-          <img src="img/clients/c6.png" alt="">
+          <img src="img/clients/itau2.png" alt="" >
+          <img src="img/clients/bradesco2.png" alt="">
+          <img src="img/clients/cetelem2.png" alt="">
+          <img src="img/clients/pan2.png" alt="">
+          <img src="img/clients/banrisul2.png" alt="">
+          <img src="img/clients/c62.png" alt="">
           <!--<img src="img/clients/client-7.png" alt="">
           <img src="img/clients/client-8.png" alt="">-->
         </div>
